🐛 画像のパスを相対パスに修正

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <h2>SVG</h2>
 
-    <img src="/svg/circle.svg" alt="Circle Icon" width="256" height="256">
-    <img src="/svg/square.svg" alt="Square Icon" width="256" height="256">
+    <img src="./svg/circle.svg" alt="Circle Icon" width="256" height="256">
+    <img src="./svg/square.svg" alt="Square Icon" width="256" height="256">
 
     <h2>PNG</h2>
 
-    <img src="/png/circle.png" alt="Circle Icon" width="256" height="256">
-    <img src="/png/square.png" alt="Square Icon" width="256" height="256">
+    <img src="./png/circle.png" alt="Circle Icon" width="256" height="256">
+    <img src="./png/square.png" alt="Square Icon" width="256" height="256">
 
 </body>
 
